--- a/feladat.html
+++ b/feladat.html
@@ -1,11 +1,11 @@
-<b>start</b> - 2023.02.19 01:10:08<br />
+<b>start</b> - 2023.02.20 01:10:11<br />
 Slovakia_Giraffe, not updated, 0.6000000000000085<br />
 Germany_EventPin kihagyva (100%), <br />
 Germany_TresorICELimburg, not updated, 0.2218934911242627<br />
 USA_PrattvilleTrillium, not updated, 0.45000000000000284<br />
 Netherlands_EvolutionBeeckestijn kihagyva (100%), <br />
 Hungary_TatabanyaBlackhole, not updated, 0.4299999999999997<br />
-Hungary_VotiveChurch, not updated, -36.84<br />
+Hungary_VotiveChurch, not updated, -35.470000000000006<br />
 Germany_WappenHalberstadt, not updated, 0.0<br />
 UnitedKingdom_SouthStoke, not updated, 0.6800000000000068<br />
 Slovakia_ChristmasStable kihagyva (100%), <br />
@@ -49,7 +49,7 @@ Canada_GatineauFMGGarden, not updated, 0.8800000000000097<br />
 Lithuania_KaunasBasketball, not updated, 0.29999999999999716<br />
 Spain_PalmaDeMallorca-OfficialFlag, not updated, 0.0<br />
 Switzerland_GiddyUpGo, not updated, 1.0<br />
-Belgium_KnokkeHeist, not updated, 0.5<br />
+Belgium_KnokkeHeist, not updated, 0.75<br />
 Hungary_Evolution, not updated, 0.9722222222222143<br />
 Netherlands_WapenVanEnkhuizen, not updated, 0.0<br />
 USA_OfficerDown, not updated, 0.0<br />
@@ -175,7 +175,7 @@ Germany_SkylarkFeldlerche kihagyva (100%), <br />
 Netherlands_MysteryBikeField kihagyva (100%), <br />
 Australia_Brisbane, not updated, 0.0<br />
 Australia_EgyptianMask kihagyva (100%), <br />
-Germany_BerlinMunzeePin, not updated, 0.6799999999999997<br />
+Germany_BerlinMunzeePin, not updated, 0.75<br />
 Germany_DiamantBerlin, not updated, 0.0<br />
 Germany_BerlinBear, not updated, 0.0<br />
 Germany_HonowWappen, not updated, 0.6711409395973149<br />
@@ -205,7 +205,7 @@ Canada_SpringInOttawa kihagyva (100%), <br />
 Canada_OttawaNewYears kihagyva (100%), <br />
 Canada_SummerInOttawa kihagyva (100%), <br />
 USA_TheAppleValleyApple kihagyva (100%), <br />
-USA_LighteksMinnesotaWild, not updated, 0.1600000000000037<br />
+USA_LighteksMinnesotaWild, not updated, 0.9299999999999997<br />
 USA_ChristmasWreath kihagyva (100%), <br />
 USA_WinterOlympics2018 kihagyva (100%), <br />
 USA_R2D2 kihagyva (100%), <br />
@@ -415,7 +415,7 @@ USA_MOAChristmasCard kihagyva (100%), <br />
 Germany_AreYouXZeePerienced, not updated, 0.0<br />
 Germany_MixedGardenRT kihagyva (100%), <br />
 Germany_AppenzellerSennenhundRT, not updated, 0.9800000000000004<br />
-Germany_PatchworkRT, not updated, 0.0<br />
+Germany_PatchworkRT, not updated, 0.060000000000002274<br />
 Germany_FlatsAppenzellerRT, not updated, 0.4399999999999977<br />
 Germany_WeddingDay kihagyva (100%), <br />
 Germany_SportparkEvolutionsRT1, not updated, 0.0<br />
@@ -757,136 +757,4 @@ USA_SpyTrain kihagyva (100%), <br />
 USA_GShiftyJewels62West, not updated, 0.6600000000000001<br />
 USA_GreenvilleFlamingoFeather kihagyva (100%), <br />
 Canada_Feb2023HeartGarden, not updated, 0.0<br />
-USA_SpyGlass, not updated, 0.0<br />
-USA_TiedUpInKnotzInRoundRock, not updated, 0.9000000000000057<br />
-USA_TiedUpInKnotzInWeatherfordIreland, not updated, 0.0<br />
-USA_EllisCreekOwl kihagyva (100%), <br />
-USA_EllisCreekOwlFlats, not updated, 0.0<br />
-USA_WeatherfordEmeraldSquare kihagyva (100%), <br />
-USA_GardenGirl kihagyva (100%), <br />
-USA_TexasGoldenTicket kihagyva (100%), <br />
-USA_TexasGoldenTicketFlats, not updated, 0.0<br />
-USA_MarshallMallard kihagyva (100%), <br />
-USA_UncutDiamond kihagyva (100%), <br />
-USA_UncutDiamondFlats kihagyva (100%), <br />
-USA_BabyGroot kihagyva (100%), <br />
-USA_WeatherfordXmasOwl kihagyva (100%), <br />
-USA_AvocatoAvocato kihagyva (100%), <br />
-USA_AvocatoToy, not updated, 0.0<br />
-USA_WeatherfordStPatricksOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwl kihagyva (100%), <br />
-USA_PumpkinSpiceOwlFlats kihagyva (100%), <br />
-USA_BundtiniTrail kihagyva (100%), <br />
-USA_JewelOfAHeart kihagyva (100%), <br />
-USA_LetsTalkAbundtLove kihagyva (100%), <br />
-USA_FortWorthTXCowboyBoots, not updated, 0.0<br />
-USA_Cowtown kihagyva (100%), <br />
-USA_VelmaCrossbow, not updated, 0.0<br />
-USA_Shaggy, not updated, 0.0<br />
-USA_MysteryMachine, not updated, 0.0<br />
-USA_FortWorthFighterJet, not updated, 0.0<br />
-USA_TCUHornedFrogs, not updated, 0.0<br />
-USA_GeowoodstockXVIITexas, not updated, 0.0<br />
-USA_FortWorthRootinTootinMunzeeCow, not updated, 0.0<br />
-USA_TigerKing, not updated, 0.2400000000000091<br />
-USA_TexasGeowoodstock2019 kihagyva (100%), <br />
-USA_FortWorthSucculents kihagyva (100%), <br />
-USA_RobVsMatt, not updated, 0.0<br />
-USA_BrightColoredHorse, not updated, 0.0<br />
-USA_BrightColoredHorseFlats, not updated, 0.0<br />
-USA_RuhRohRAGGY, not updated, 0.0<br />
-USA_PrizeWheel kihagyva (100%), <br />
-USA_EvoHedgehog kihagyva (100%), <br />
-USA_SeahorseByTheSeaShore kihagyva (100%), <br />
-USA_LakeForestMixture, not updated, 0.1700000000000017<br />
-USA_GreenvillesAmethystRoad kihagyva (100%), <br />
-USA_SaintMarysHeart kihagyva (100%), <br />
-USA_GreenvilleOhioSpiritTrophy, not updated, 0.0<br />
-USA_GreenvilleEvolutionSquareFull kihagyva (100%), <br />
-USA_GreenvilleEvolutionSquareExtension, not updated, 0.0<br />
-USA_GreenvilleZodiacWheels kihagyva (100%), <br />
-USA_GreenvilleRUMCircle, not updated, 0.0<br />
-USA_GreenvilleFlatSurprise, not updated, 0.0<br />
-USA_GreenvilleOhioLightbulb, not updated, 0.0<br />
-USA_GreenvilleSouthCarolina, not updated, 0.0<br />
-USA_JaysvilleFlatCircles, not updated, 0.0<br />
-USA_CCTXZeeCret, not updated, 0.0<br />
-USA_DecaturHearts kihagyva (100%), <br />
-USA_ManhattanKSFrogPopUp kihagyva (100%), <br />
-UnitedKingdom_CromerJewelTriangle kihagyva (100%), <br />
-UnitedKingdom_WhatsThatComingOverTheNVGEIsItA, not updated, 0.34999999999999787<br />
-USA_ScoobyDooCrossbow, not updated, 0.0<br />
-USA_TexasStateFlag kihagyva (100%), <br />
-USA_Geowoodstock2019 kihagyva (100%), <br />
-USA_MansfieldMuru, not updated, 0.0<br />
-USA_CedarRapidsIAFlag, not updated, 0.0<br />
-Hungary_JewelAndColor kihagyva (100%), <br />
-USA_CRMunzee6thBirthday kihagyva (100%), <br />
-USA_CRAirMysteryTrail kihagyva (100%), <br />
-USA_CRMunzFit20 kihagyva (100%), <br />
-USA_HayesBattlefield kihagyva (100%), <br />
-USA_CREgyptianZodiac kihagyva (100%), <br />
-USA_CherryBombCedarRapids kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsLou kihagyva (100%), <br />
-USA_CRJonesParkBirthday7FlatsMatt kihagyva (100%), <br />
-USA_GCandyCane kihagyva (100%), <br />
-USA_GCandyCaneFlats, not updated, 0.0<br />
-USA_GShamrock kihagyva (100%), <br />
-USA_GShamrockFlats, not updated, 0.0<br />
-USA_GPumpkin kihagyva (100%), <br />
-USA_GPumpkinFlats, not updated, 0.0<br />
-USA_Mauhaus, not updated, 0.0<br />
-USA_GToyotaCrossbows, not updated, 0.0<br />
-USA_GToyotaCrossbowsBiggy, not updated, 0.0<br />
-USA_GToyota kihagyva (100%), <br />
-USA_GToyotaFlats, not updated, 0.0<br />
-USA_GJewelBelt, not updated, 0.0<br />
-USA_GEvoBelt, not updated, 0.0<br />
-USA_GBypassMixed, not updated, 0.0<br />
-USA_G62WestEvo, not updated, 0.0<br />
-USA_NoelridgeMysteryFlats kihagyva (100%), <br />
-USA_GSouthland, not updated, 0.0<br />
-USA_GMorning, not updated, 0.0<br />
-USA_GCHampionWay, not updated, 0.0<br />
-USA_GGamingTable, not updated, 0.0<br />
-USA_PotOfGold, not updated, 0.0<br />
-USA_WitchsHat, not updated, 0.0<br />
-USA_OwensboroRiverboat, not updated, 0.0<br />
-USA_OwensboroRiverboatFlats, not updated, 0.0<br />
-Lithuania_SeskinesSkulpturyParkas, not updated, 0.0<br />
-Netherlands_RobAndLouise kihagyva (100%), <br />
-USA_TaylorSwiftTheEras, not updated, 0.0<br />
-USA_GreenSpyFrog kihagyva (100%), <br />
-USA_PotOZees, not updated, 0.0<br />
-USA_MaineWeatherBalloon, not updated, 0.0<br />
-USA_HappyHoliday20, not updated, 0.0<br />
-USA_HazardSpurCampton, not updated, 0.0<br />
-USA_HazardSpurCamptonFlats, not updated, 0.0<br />
-USA_CrossedArrowsOwensboro, not updated, 0.0<br />
-USA_GHarmony kihagyva (100%), <br />
-USA_GHarmonyFlats, not updated, 0.0<br />
-USA_MontgomeryChiliPepper, not updated, 0.0<br />
-USA_ConcordHearts kihagyva (100%), <br />
-USA_WalkieTalkieWatch kihagyva (100%), <br />
-USA_StPetersNVG kihagyva (100%), <br />
-USA_FoxHillFit, not updated, 0.0<br />
-USA_CelticKnot, not updated, 0.0<br />
-USA_STLPirateShip, not updated, 0.0<br />
-USA_BluesMunzee, not updated, 0.0<br />
-USA_HowellViking, not updated, 0.0<br />
-USA_STLPokeball, not updated, 0.0<br />
-USA_STLTardis, not updated, 0.0<br />
-USA_KirkwoodEvolutions1, not updated, 0.0<br />
-USA_KirkwoodEvolutions2, not updated, 0.0<br />
-USA_KirkwoodEvolutions3, not updated, 0.0<br />
-USA_KirkwoodEvolutions4, not updated, 0.0<br />
-USA_KirkwoodEvolutions5, not updated, 0.0<br />
-USA_KirkwoodEvolutions6 kihagyva (100%), <br />
-USA_KirkwoodEvolutions7, not updated, 0.0<br />
-USA_Woodpecker, not updated, 0.0<br />
-USA_ZBriefcase kihagyva (100%), <br />
-USA_WinterCardinalFeather kihagyva (100%), <br />
-USA_Chickadee kihagyva (100%), <br />
-USA_FlatDogBone kihagyva (100%), <br />
-<b>stop</b> - 2023.02.19 01:43:33<br />
-összesen 2004<br />
+USA_SpyGlass, <b>updated</b>, 123, <a href="https://www.munzee.com/map/dnrmhsuv8/16.0" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_SpyGlass.json" target="_blank">json</a><br />
