--- a/feladat.html
+++ b/feladat.html
@@ -691,3 +691,5 @@ Australia_RUMbleBee kihagyva (100%), <br />
 Australia_FlatsFlyAKite kihagyva (100%), <br />
 Australia_SouthernCrossKite kihagyva (100%), <br />
 Australia_ToowoombaRose, <b>updated</b>, 156, <a href="https://www.munzee.com/map/r7h5324hk/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/Australia_ToowoombaRose.json" target="_blank">json</a><br />
+Australia_SnowBeeMelting kihagyva (100%), <br />
+USA_CelticSnake, <b>updated</b>, 66, <a href="https://www.munzee.com/map/9vk4uqw9m/16.2" target="_blank">map</a>, <a href="https://hunzee.github.io/www/js/USA_CelticSnake.json" target="_blank">json</a><br />
